--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -40,5 +40,4 @@ nav{
 section{
     display: flex;
     justify-content: center;
-    margin: 1em;
 }
