--- a/public/styles/manual.css
+++ b/public/styles/manual.css
@@ -1,5 +1,5 @@
 .manual{
-    margin-top: 600px;
+    margin-top: 50em;
     margin-bottom: 5%;
     padding:5%;
     height: 150em;
